[fix] hide overflow on full modal

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -124,6 +124,8 @@
 }
 
 .modal.fullTheme {
+  overflow: hidden;
+
   .modalContent {
     margin: 0;
     padding: 0;
